# 3dobj

./: CMakeLists.txt  README.md  amigafile.cpp  amigafile.hpp  build.sh  cube.cpp  cube.hpp  cube2.cpp  cube2.hpp  face.cpp  face.hpp  generator.cpp  main.cpp  makefile  object3d.cpp  object3d.hpp  rotation.cpp  run.sh  thorus.cpp  thorus.hpp  toolchain.cmake  vector3d.cpp  vector3d.hpp  vertex.cpp  vertex.hpp  vertices.cpp  vertices.hpp
.github/workflows/: cmake-single-platform.yml
src/: AmigaFile.cpp  AmigaFile.hpp  ComponentFactories.cpp  ComponentFactories.hpp  ComponentFactoryBase.cpp  ComponentFactoryBase.hpp  Components.cpp  Components.hpp  Composite.cpp  Composite.hpp  Cube.cpp  Cube.hpp  Cube2.cpp  Cube2.hpp  CubeExt.cpp  CubeExt.hpp  Cuboid.cpp  Cuboid.hpp  Face.cpp  Face.hpp  Faces.cpp  Faces.hpp  GeneratorMain.cpp  IGenerator.hpp  Object3D.cpp  Object3D.hpp  Object3d.cpp  Object3d.hpp  Object3dFactory.cpp  Object3dFactory.hpp  Object3dFactoryTest.cpp  ObjectComponents.cpp  ObjectComponents.hpp  ObjectFactories.cpp  ObjectFactories.hpp  ObjectFactoryBase.cpp  ObjectFactoryBase.hpp  Params.hpp  Rotation.cpp  Rotation.hpp  (+40 more)
